k8s/frontend/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: leave-app-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sudha506/frontend:v38
          ports:
            - containerPort: 80
          volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
          - name: nginx-run
            mountPath: /run
      volumes:
      - name: nginx-config
        configMap:
          name: frontend-config
      - name: nginx-run
        emptyDir: {}
