k8s/frontend/virtualsvc.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: frontend-ns
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend.frontend-ns.svc.cluster.local
        port:
          number: 80
